--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,63 @@
   body {
     font-family: "DM Sans";
     font-size: 1.6rem;
-    background-color: white;
+    background-color: ;
     text-align: center;
     overflow: overlay;
+    background-color: white;
   }
+
+.menu {
+  visibility: hidden;
+  position: fixed;
+
+}
+
+.menu.menu-expanded {
+    z-index: +1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translateY(0%);
+    transition: transform 300ms;
+  
+    width: 100vw;
+    height: 100vh;
+  
+    padding-top: var(--nav-height);
+    background-color: aqua;
+  }
+
+.menu-expanded {
+    overflow: hidden;
+    width: 100%;
+  }
+
+#openButton {
+  background: ;
+
+}
+
+nav {
+  background-color: red;
+  width: 100%;
+  height: auto;
+  justify-content: space-between;
+  display: flex;
+}
+
+header::before {
+  content: "";
+  background-color: var(--brand-light);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: calc(108rem + var(--nav-height));
+  width: 100%;
+}
 
 
 ul {
@@ -34,6 +87,11 @@ h4 {
     font-size: 1.4rem;
     color: var(--primary-color);
     margin-bottom: 1.6rem;
+    text-transform: uppercase;
+
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
   }
   
 h1 {
@@ -42,14 +100,20 @@ h1 {
     line-height: 130%;
   
     margin-bottom: 2.4rem;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
   }
   
 p {
     font-size: 1.8rem;
     line-height: 150%;
+    
     font-weight: 400;
     color: var(--paragraph);
-  
+    font-family: "DM Sans";
+    font-style: normal;
+
     margin-bottom: 3.2rem;
 }
 
@@ -109,7 +173,7 @@ div.containerInfo {
     color: var(--headline);
   }
   
-  div p.p1 {
+div p.p1 {
     margin: 0;
     font-size: 1.6rem;
     line-height: 150%;
@@ -117,7 +181,7 @@ div.containerInfo {
     color: var(--primary-color);
   }
 
-div.artigos {
+div.services {
     background-color: #f7f9f9;
    padding-top: 0%;
     width: 37.5rem;
@@ -133,6 +197,7 @@ div p .imgCard {
     margin-left: 0rem;
     position: relative;
   }
+
 div p.card {
     position: static;
     width: 248px;
@@ -148,4 +213,24 @@ div p.card {
     text-align: center;
     /* Secondary Colors/gray-headline */
     color: #212529;
+  }
+
+div.sobreNos {
+    background: #fffaf1;
+  }
+  
+img.imageSobreNos {
+    width: 32.7rem;
+    height: 28.2rem;
+  
+    border-radius: 2rem;
+  
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+    margin-bottom: 1rem;
+    margin-top: 6rem;
+  }
+
+div.contato {
+    background-color: #ffffff;
   }
