feat: introducing architecting of layers

--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -640,7 +640,7 @@
     position: fixed;
     bottom: 1rem;
     right: 2rem;
-    visibility: hidden;
+    visibility: visible;
   
     transform: translateY(100%);
     transition: transform 300ms;
