--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -26,9 +26,10 @@
   body {
     font-family: "DM Sans";
     font-size: 1.6rem;
-    background-color: var(--brnad-light2);
+    background-color: none;
     text-align: center;
     overflow: overlay;
+    background: none;
   }
   
   
@@ -278,6 +279,11 @@
     list-style: none;
   }
   
+  a {
+    text-decoration:none;
+    style-decoration:none;
+  }
+
   header h4 {
     font-size: 1.4rem;
     color: var(--primary-color);
