--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -1,13 +1,13 @@
 /* ==================GERAL=====================*/
 * {
-    margin: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  box-sizing: border-box;
+}
   
-  html {
-    scroll-behavior: smooth;
-  }
-  
+html {
+  scroll-behavior: smooth;
+}
+
   :root {
     --primary-color: hsl(170, 100%, 26%);
     --headline: hsl(210, 11%, 15%);
@@ -29,9 +29,10 @@
     background-color: none;
     text-align: center;
     overflow: overlay;
-    background: none;
+    background:none;
   }
   
+ 
   
   /* ==================NAVIGATION=====================*/
   
@@ -56,8 +57,8 @@
   }
   
   body .wrapper {
-    background-color:var(--primary-color);
-    width: 37.5rem;
+    background-color: var(--primary-color);
+    width: 100%;
     height: var(--nav-height);
   
     margin-right: 0;
@@ -259,19 +260,22 @@
     top: 0;
     left: 0;
     z-index: -1;
-    height: calc(108rem + var(--nav-height));
+    height: calc(95rem + var(--nav-height));
     width: 100%;
-  
-    background-color: var(--brand-light);
+    background-image: url("../assets/paraty1.jpg");
+   //background-color: var(--brand-light);
   }
   header {
     margin-right: auto;
     margin-left: auto;
     padding-top: calc(4.1rem + var(--nav-height));
-    width: 37.5rem;
+    //width: 375px;
     align-items: center;
     display: block;
-    background: none;
+    background: var(--brand-light);
+    z-index:-2;
+    position:absolute;
+  
     
   }
   
@@ -352,15 +356,20 @@
   }
   
   /* ==================CLASSES=====================*/
-  
+  .intro {
+    color:white;
+    padding:10px;
+  }
+
   .imageWoman {
     display: block;
     margin: auto;
     object-position: 0 2rem;
+ 
   }
   
   .containerInfo {
-    padding-block: 1rem;
+    //padding-block: 1rem;
     margin-inline: auto;
   
     border: 1px solid var(--brand-light);
@@ -370,8 +379,9 @@
     flex-direction: column;
     justify-content: center;
   
-    height: 47rem;
-    width: 32.7rem;
+    height: 470px;
+    width:34.3rem;
+   
   
     background-color: var(--brand-beige);
   }
@@ -385,7 +395,7 @@
   
     color: var(--headline);
   }
-  
+
   .p1 {
     margin: 0;
     font-size: 1.6rem;
@@ -393,22 +403,57 @@
   
     color: var(--primary-color);
   }
-  
+
+  #houseLinks {
+    text-decoration: none;
+    color: var(--headline);
+  }
+
+@media screen and (min-width:799px) {
+  header div.services {
+    background-color: var(--brand-light);
+    padding-left:20rem;
+    padding-right:20rem;
+    padding-bottom:10rem;
+    
+  }
+  .titleServices {
+    color: white;
+
+  }
+}
+@media screen and (max-width:800px) {
   header div.services {
     background: none;
     padding-top: 0%;
-    width: 37.5rem;
-    height: 160rem;
-    left: 37.5rem;
+    right: 3rem;
+    left: 3rem;
     top: 1.1rem;
     padding-block: 1rem;
+  
+  }
+
+  .containerInfo {
+    //padding-block: 1rem;
+    margin-inline: auto;
+  
+    border: 1px solid var(--brand-light);
+    border-radius: 0.6rem;
   
     display: flex;
     flex-direction: column;
     justify-content: center;
+  
+    height: 470px;
+    min-width:320px;
+    max-width:800px;
+  
+    background-color: var(--brand-beige);
   }
+}
 
   
+
   .imgCard {
     margin-right: 10rem;
     margin-top: 0.5rem;
@@ -455,6 +500,11 @@
     padding: 2.4rem;
     color: var(--paragraph);
   }
+
+  .tripAdvisor {
+    width: 10rem;
+    height: 10rem;
+  }
   
   header div div .CardContainer {
     align-items: flex-start;
@@ -463,8 +513,8 @@
     flex-direction: column;
     box-sizing: border-box;
   
-    width: 32.7rem;
-    height: 20.7rem;
+   //width: 32.7rem;
+    //height: 20.7rem;
   
     margin-left: 2.4rem;
     margin-right: 2.4rem;
@@ -480,23 +530,42 @@
   }
   
   .sobreNos {
-    background: #fffaf1;
+    background: white;
     border-radius: 1.3rem;
+
+    margin:auto;
+    padding: 2.4rem;
+
+    min-width:320px;
+    max-width:800px;
   }
   
   .imageSobreNos {
     width: 32.7rem;
-    height: 28.2rem;
+    height: 282px;
   
     border-radius: 2rem;
   
     margin-left: 2.4rem;
     margin-right: 2.4rem;
+
     margin-bottom: 1rem;
     margin-top: 6rem;
   }
   .contato {
     background-color: #ffffff;
+    margin:auto;
+    margin-top: 3rem;
+    margin-bottom: 5rem;
+    padding-left: 3rem;
+    padding-top: 5rem;
+
+    min-width:320px;
+    max-width:800px;
+
+    height: 45rem;
+
+    border-radius: 1.3rem;
   }
   
   .tituloContato {
@@ -511,6 +580,10 @@
     padding-top: 10rem;
   
     color: var(--headline);
+  }
+
+  .buttonContact {
+    margin-bottom:3rem;
   }
   
   header p.info {
@@ -566,7 +639,7 @@
   }
   #buttonBottom {
     /*=====container do botao=====*/
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
     margin-right: auto;
     margin-left: auto;
     border-radius: 4rem;
@@ -591,19 +664,20 @@
     color: var(--brand-beige);
     background-color: var(--primary-color);
   }
-  header img.imgLogo {
-    width: 20.4rem;
-    height: 11.3rem;
-    align-items: center;
-  
-    margin-left: 2.7rem;
-    margin-top: 1.2rem;
-    margin-bottom: 5rem;
+   img.imgLogo {
+    width: 10rem;
+    height: 6rem;
+    //align-items: center;
+    position: absolute;
+    left: 75vw;
+    //margin-top: 1.2rem;
+    bottom: 13rem;
   }
   
   header footer {
-    width: 37.5rem;
-    height: 28.5rem;
+    //width: 375px;
+    height: 285px;
+    margin-bottom: 0rem;
   
     background-color: var(--primary-color);
   }
@@ -632,10 +706,35 @@
   
   footer .socialLinks {
     justify-content: flex-start;
-    display: flex;
-    margin: auto;
-    padding: 0;
-    align-items: center;
+    //display: flex;
+    //margin: auto;
+    //padding: 0;
+    //align-items: center;
+    //width:0rem;
+  
+  }
+
+   .certificates {
+    width: 30rem;
+    align-items: left;
+
+  }
+
+   .linkCertificates {
+    width:3rem;
+    height:3rem;
+
+    margin-bottom: 0.2rem;
+
+  }
+
+   .linkCertificatesBooking {
+    width:7rem;
+    height:3.5rem;
+
+    margin-left: 1.2rem;
+
+    
   }
   
   footer div.socialLinks ul li  a svg path.pathgoogle {
