--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -263,19 +263,19 @@ html {
     height: calc(95rem + var(--nav-height));
     width: 100%;
     background-image: url("../assets/paraty1.jpg");
-   //background-color: var(--brand-light);
+   background-color: var(--brand-light);
   }
   header {
     margin-right: auto;
     margin-left: auto;
     padding-top: calc(4.1rem + var(--nav-height));
-    //width: 375px;
+    /*width: 37rem;*/
     align-items: center;
     display: block;
     background: var(--brand-light);
     z-index:-2;
     position:absolute;
-  
+    width: 100vw;
     
   }
   
@@ -284,8 +284,8 @@ html {
   }
   
   a {
-    text-decoration:none;
-    style-decoration:none;
+    text-decoration: none;
+    style-decoration: none;
   }
 
   header h4 {
@@ -361,15 +361,30 @@ html {
     padding:10px;
   }
 
+  .imagesTop {
+    display: flex;
+    flex-direction: row;
+    padding-left: 30rem;
+  }
+
   .imageWoman {
     display: block;
-    margin: auto;
+    margin: 0px;
     object-position: 0 2rem;
  
   }
+
+  .imageReview {
+    width: 10rem;
+    height: 10rem;
+
+    display: block;
+    margin: 0px;
+      object-position: 1 5rem;  
+  }
   
   .containerInfo {
-    //padding-block: 1rem;
+    padding-block: 1rem;
     margin-inline: auto;
   
     border: 1px solid var(--brand-light);
@@ -380,7 +395,7 @@ html {
     justify-content: center;
   
     height: 470px;
-    width:34.3rem;
+    width: 34.3rem;
    
   
     background-color: var(--brand-beige);
@@ -409,19 +424,35 @@ html {
     color: var(--headline);
   }
 
-@media screen and (min-width:799px) {
-  header div.services {
-    background-color: var(--brand-light);
-    padding-left:20rem;
-    padding-right:20rem;
-    padding-bottom:10rem;
-    
-  }
   .titleServices {
-    color: white;
+   width: 50vw;
+   padding-right: 4rem;
+  }
+  .services {
+  }
+  @media screen and (min-width:799px) {
+ 
+
+    .services {
+      background-color: var(--brand-light);
+      padding-top: 10rem;
+      padding-bottom:5rem;
+      padding-left: 10rem;
+      display: flex;
+      flex-direction: row;
+    }
+    .titleServices {
+      color:hsl(210, 9%, 31%)
+  
+    }
 
   }
-}
+
+  .containersInfo {
+  display: flex;
+  flex-direction: row;
+  }
+
 @media screen and (max-width:800px) {
   header div.services {
     background: none;
@@ -433,8 +464,11 @@ html {
   
   }
 
+  header {
+    width: 100%;
+  }
   .containerInfo {
-    //padding-block: 1rem;
+    padding-block: 1rem;
     margin-inline: auto;
   
     border: 1px solid var(--brand-light);
@@ -442,7 +476,6 @@ html {
   
     display: flex;
     flex-direction: column;
-    justify-content: center;
   
     height: 470px;
     min-width:320px;
@@ -450,9 +483,36 @@ html {
   
     background-color: var(--brand-beige);
   }
-}
+    header div div .CardContainer {
+      width: 32.7rem;
+      height: 20.7rem;
+    }
 
+    .containersInfo {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  .containerInfoRight {
+   
+  }
   
+  .containerGuestReview {
+   display: flex;
+   flex-direction: row;
+  }
+
+  .h3-right {
+    text-align: left;
+    padding-left: 1rem;;
+    width: 20rem;
+  }
+
+  .imageUser {
+    width: 3rem;
+    height: 3rem;
+  }
 
   .imgCard {
     margin-right: 10rem;
@@ -507,21 +567,26 @@ html {
   }
   
   header div div .CardContainer {
+   
+
     align-items: flex-start;
     display: flex;
     justify-content: center;
     flex-direction: column;
     box-sizing: border-box;
-  
-   //width: 32.7rem;
-    //height: 20.7rem;
-  
+    width: 30rem;
+    height: 20.7rem;
     margin-left: 2.4rem;
     margin-right: 2.4rem;
     margin-top: 2.4rem;
     padding: 2.4rem;
+
   
-    /* Primary Colors/brand-green-light */
+    /* Primary Colors/brand-green-light
+      margin-left: 2.4rem;
+    margin-right: 2.4rem;
+    margin-top: 2.4rem;
+    padding: 2.4rem; */
     border: 1px solid #dce9e2;
     border-radius: 6px;
   
@@ -667,15 +732,17 @@ html {
    img.imgLogo {
     width: 10rem;
     height: 6rem;
-    //align-items: center;
     position: absolute;
     left: 75vw;
-    //margin-top: 1.2rem;
     bottom: 13rem;
+  /*
+    align-items: center;
+    margin-top: 1.2rem;
+*/
   }
   
   header footer {
-    //width: 375px;
+    /*width: 375px;TELA MOBILE*/
     height: 285px;
     margin-bottom: 0rem;
   
@@ -757,4 +824,38 @@ html {
   
     transform: translateY(0);
   
-  }
+}
+
+.box {
+  background: transparent;
+  perspective: 1000px;
+}
+
+.box__content {
+  background: transparent;
+  width: 32.7rem;
+  height: 20.7rem;
+  position: relative;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  transition: transform 600ms ease-in-out;
+}
+
+.box__front,
+.box__back {
+  position: absolute;
+  width: 32.7rem;
+  height: 20.7rem;
+  backface-visibility: hidden;
+}
+
+.box__back {
+  background: green;
+  transform: rotateY(180deg);
+  width: 32.7rem;
+  height: 20.7rem;
+}
+
+.box:hover .box__content {
+  transform: rotateY(180deg);
+}
