--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -356,31 +356,105 @@ html {
   }
   
   /* ==================CLASSES=====================*/
+  .containerLogotipo {
+    display: flex;
+    flex-direction: row;
+    background-color: red;
+  }
+
+  .logoContainerLogotipo {
+    width: 50rem;
+    height: 50rem;
+    margin-top: 0px;
+    background-color: blue;
+  }
+  
+  .logoContainerImage {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .containerStart {
+    display: flex;
+    flex-direction: row;
+
+  }
+
+
+
+  .stars {
+    width: 10rem;
+    height: 10rem;
+    background-color: blue;
+    position: relative;
+  }
   .intro {
     color:white;
     padding:10px;
+    width: 50rem;
+    margin-left: 20rem;
   }
 
-  .imagesTop {
+  .showcase{
+    width: 100%;
+    height: 100vh;
+
+  }
+
+  .showcase img {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top:0;
+    left:0;
+    object-fit: cover;
+  }
+
+  .showtext {
+    mix-blend-mode: hard-light;
+    color: #fff;
+    -webkit-text-stroke: 1px #FFF;
+    text-stroke: 1px #FFF;
+ }
+  .containerImages {
     display: flex;
     flex-direction: row;
-    padding-left: 30rem;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
   }
 
+  .containerInfoImage {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
   .imageWoman {
     display: block;
     margin: 0px;
-    object-position: 0 2rem;
+    object-position: 0 3rem;
  
   }
 
   .imageReview {
-    width: 10rem;
-    height: 10rem;
-
+    width: 15rem;
+    height: 15rem;
+    position: relative;
+    bottom: 9.5rem;
     display: block;
     margin: 0px;
-      object-position: 1 5rem;  
+    object-position: 1 2rem;  
+  }
+
+  .imageTraveler {
+    width: 14.5rem;
+    height: 14.5rem;
+    position: relative;
+    bottom: 10.5rem;
+    display: block;
+    margin: 0px;
+    object-position: 1 2rem; 
   }
   
   .containerInfo {
@@ -524,11 +598,22 @@ html {
     text-align: left;
     padding-left: 1rem;;
     width: 20rem;
+    font-size: 15px;
+    color: var(--primary-color);
+  }
+  .p1-right {
+    font-size: 13px;
   }
 
   .imageUser {
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2rem;
+    margin-left: 3rem;
+  }
+
+  .userRating {
+    width: 5.3rem;
+    height: 4rem;
   }
 
   .imgCard {
@@ -581,7 +666,7 @@ html {
 
   .tripAdvisor {
     width: 10rem;
-    height: 10rem;
+    height: 9.3rem;
   }
   
   header div div .CardContainer {
@@ -660,7 +745,7 @@ html {
   
     margin-right: 5.4rem;
     margin-left: 2.4rem;
-    padding-top: 10rem;
+    padding-top: 2.5rem;
   
     color: var(--headline);
   }
@@ -669,16 +754,17 @@ html {
     margin-bottom:3rem;
   }
   
+  .contactIcon {
+    margin-left: 0.8rem;
+  }
+
   header p.info {
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 1.6rem;
     text-align: left;
-  
-    margin-left: 5.6rem;
-    margin-top: 2.5rem;
-  
+    margin-left: 2rem;
     color: var(--paragraph);
   }
   
@@ -812,6 +898,16 @@ html {
     margin-bottom: 0.2rem;
 
   }
+  .infoMaps {
+   display:flex;
+   flex-direction: row;
+  }
+
+  .contactsIcon {
+    width: 4rem;
+    height: 4rem;
+  }
+
 
    .linkCertificatesBooking {
     width:7rem;
