--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -359,40 +359,92 @@ html {
   .containerLogotipo {
     display: flex;
     flex-direction: row;
-    background-color: red;
   }
 
   .logoContainerLogotipo {
-    width: 50rem;
-    height: 50rem;
+    width: 30rem;
+    height: 30rem;
     margin-top: 0px;
-    background-color: blue;
   }
   
   .logoContainerImage {
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+  .subtittleStart {
+    color: var(--brand-light);
+    font-size: 1.8rem;
+  
+    line-height: 200%;
+  }
+  .start {
+    display: flex;
+    flex-direction: row;
   }
   
   .containerStart {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
 
   }
 
+  .percentContainerStart {
+    font-size: 5.8rem;
+  
+    line-height: 130%;
+    gap: 0.4rem;
+    margin-top: 4rem;
+  
+    color: var(--headline);
+  }
 
+  .iconStart {
+    display: flex;
+    flex-direction: row;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    
+  }
 
   .stars {
-    width: 10rem;
-    height: 10rem;
-    background-color: blue;
+    width: 4rem;
+    height: 4rem;
+    margin-top: 4.5rem;
+    margin-left: 1rem ;
     position: relative;
   }
+
+  .tourismText {
+    margin-left: 4rem;
+  }
+
   .intro {
-    color:white;
-    padding:10px;
-    width: 50rem;
-    margin-left: 20rem;
+    color:var(--brand-dark);
+    padding: 10px;
+    width: 30rem;
+  }
+
+  .containerCoconut {
+    display: flex;
+    flex-direction: row;
+  }
+  .coconut {
+    width: 15rem;
+    height: 20rem;
+    position: absolute;
+    right: 66rem;
+    transform: rotate(-8deg);
+  }
+
+  .flip {
+    width: 7rem;
+    height: 7rem;
+    position: absolute;
+    right: 29rem;
+    top: 33rem;
+    transform: rotate(15deg);
   }
 
   .showcase{
@@ -430,6 +482,16 @@ html {
     align-items: center;
     justify-content: center;
   }
+
+  .conteinerLogotipoText {
+    background-image: url("../assets/backgroundCard_resized.png");
+    border-radius: 2rem;
+    width: 40rem;
+    height: 30rem;
+
+    margin-left: 20rem;
+  }
+
   .imageWoman {
     display: block;
     margin: 0px;
