--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -563,6 +563,13 @@ html {
    position: relative;
   }
 
+  .textCard {
+    font-size: 1.3rem;
+    width: 20rem;
+    align-items: center;
+    margin: auto;
+  }
+
   .services {
   }
   @media screen and (min-width:799px) {
@@ -715,7 +722,12 @@ html {
     /* Primary Colors/brand-green */
     color: var(--primary-color);
   }
-  
+
+  .containerAbout {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+  }
   header article.SobreNosArtigo {
     font-family: "DM Sans";
     font-style: normal;
@@ -764,10 +776,10 @@ html {
   .sobreNos {
     background: white;
     border-radius: 1.3rem;
-    padding: 2.4rem;
+    padding-bottom: 4.4rem;
     margin:auto;
-    min-width:320px;
-    max-width:800px;
+    width: 60rem;
+
   }
   
   .imageSobreNos {
@@ -782,19 +794,14 @@ html {
     margin-bottom: 1rem;
     margin-top: 6rem;
   }
-  .contato {
-    background-color: #ffffff;
+  .contact {
+    background-color: white;
     margin:auto;
     margin-top: 3rem;
     margin-bottom: 5rem;
     padding-left: 3rem;
     padding-top: 5rem;
-
-    min-width:320px;
-    max-width:800px;
-
-    height: 45rem;
-
+    width: 60rem;
     border-radius: 1.3rem;
   }
   
@@ -816,6 +823,15 @@ html {
     margin-bottom:3rem;
   }
   
+  .crab {
+    width: 10rem;
+    height: 10rem;
+    position: absolute;
+    right: 20rem;
+    bottom: 108rem;
+    transform: rotate(20deg);
+  }
+
   .contactIcon {
     margin-left: 0.8rem;
   }
@@ -911,7 +927,7 @@ html {
     /*width: 375px;TELA MOBILE*/
     height: 285px;
     margin-bottom: 0rem;
-  
+    margin-top: 4rem;
     background-color: var(--primary-color);
   }
   
@@ -1010,49 +1026,37 @@ html {
     top:145rem;
   }
 
-  .box {
-    background: transparent;
-    perspective: 100 0px;
-    width: 30.7rem;
-    height: 20.7rem;
-    position: relative;
-    padding: 0px;
-    margin-left: 2rem;
-  }
-
-  .box__content {
-    background: var(--brand-beige);
-    border-radius: 3rem;
-    width: 30.7rem;
-    height: 20.7rem;
-    position: relative;
-    padding: 0px;
-    transform-style: preserve-3d;
-    transform: rotateY(0deg);
-    transition: transform 600ms ease-in-out;
-
-  }
-
-  .box__front,
-  .box__back {
+  .boxFront {
     position: absolute;
+    background: var(--brand-beige);
+    margin-left: 2rem;
+    border-radius: 3rem;
+    width: 34.7rem;
+    height: 20.7rem;
+    position: relative;
+    padding: 0px;
+    transition: 400ms;
   
-    backface-visibility: hidden;
   }
 
-  .box__back {
-    transform: rotateY(180deg);
-    width: 100%;
-    height: 100%;
+  .boxFront:hover {
+    background: var(--brand-dark);
+    width: 36.7rem;
+    height: 23.7rem;
   }
 
-  .box:hover .box__content {
-    transform: rotateY(180deg);
+  .boxFront:hover .textCard {
+    color: var(--brand-beige);
+  }
+ 
+  .boxFront:hover .card {
+    color: var(--brand-beige)
   }
 
-   .houses {
+  .houses {
     padding: 0px;
     width: 100%;
     height:100%;
     border-radius: 3rem;
   }
+
