--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -925,10 +925,12 @@ html {
   
   header footer {
     /*width: 375px;TELA MOBILE*/
-    height: 285px;
+    
     margin-bottom: 0rem;
     margin-top: 4rem;
     background-color: var(--primary-color);
+    display: flex;
+    flex-direction: row;
   }
   
   .paragrafoFooter {
@@ -998,6 +1000,33 @@ html {
   
   footer div.socialLinks ul li  a svg path.pathgoogle {
     fill: white;
+  }
+
+  .partnersText {
+    font-family: "DM Sans";
+    font-size: 0.9rem;
+    color: var(--brand-beige);
+    width: 20rem;
+    background: none;
+    position: absolute;
+    bottom: 14rem;
+    left: 30rem;
+  }
+
+  .partnersGroup {
+    width: 60rem;
+    height: 20rem;
+    display: flex;
+    flex-direction: row;
+    margin-left: 3rem;
+    background: none;
+    padding-left: 10rem;
+  }
+
+  .partners {
+    width: 15rem;
+    height: 20rem;
+    margin-left: 3rem;
   }
   
   #buttonFloat {
