--- a/frontend/src/layout/About.css
+++ b/frontend/src/layout/About.css
@@ -25,6 +25,9 @@ body {
   background: none;
 }
 
+.servicesHome {
+  margin-top: 8rem;
+}
 .titleAbout {
   color: var(--brnad-light2);
 }
@@ -77,6 +80,10 @@ body {
 
 }
 
+.fullCard {
+  display: flex;
+  flex-direction: row;
+}
 .boxFrontAboutOne:hover {
   background-image: url('../assets/logotipos/booking_resized.png');
   width: 367px;
@@ -106,6 +113,38 @@ body {
 
 }
 
+.experience {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+height: 300rem;
+  background-color: none;
+}
+
+.photosServices {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.titleCard {
+  margin-left: 10rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+
+}
+.buttonCard{
+  width: 15rem;
+  height: 3rem;
+margin-left: 8rem;
+  top: 70rem;
+  left: 9rem;
+  color: white;
+  font-weight: 700;
+  border-radius: 0.5rem;
+  background-color: var(--primary-color);
+  transition: 400ms;
+}
 
 @media screen and (max-width:1000px) {
 
