--- a/frontend/src/layout/App.css
+++ b/frontend/src/layout/App.css
@@ -362,8 +362,13 @@ header header div {
 
 }
 
+.listLink:hover {
+  color: #FFF;
+}
+
 .listLink {
 	font-family: monaco;
+  color: wheat;
 	text-decoration: none ;
   font-size: 1.3rem;
 	color: var(--background-button);
@@ -373,6 +378,8 @@ header header div {
 .listLink::after, .listLink::before {
 	content: '';
 	display: block;
+	text-decoration: none ;
+   color:#FFF;
 	background: var(--background-button);
 	width: 0;
 	height: 2px;
@@ -812,7 +819,7 @@ header div div .CardContainer {
   height: 6rem;
   position: relative;
   right: 40rem;
-  bottom: 48rem;
+  bottom: 55rem;
   transform: rotate(30deg);
 }
 
