--- a/src/layout/Articles.css
+++ b/src/layout/Articles.css
@@ -110,7 +110,7 @@ nav.scroll {
   justify-content: center;
 }
 
-.drawPhotos {
+ .drawPhotos {
   display: flex;
   flex-direction: column;
 }
@@ -128,8 +128,8 @@ nav.scroll {
 }
 
 .photos button {
-  position: absolute;
-  top: 70rem;
+  position: fixed;
+  top: 90rem;
   left: 9rem;
   color: white;
   background-color: black;
@@ -143,6 +143,8 @@ nav.scroll {
 .articles {
   display: flex;
   flex-direction: row;
+  width: auto;
+  height: auto;
 }
 
 .articlesLeft {
@@ -170,9 +172,9 @@ nav.scroll {
 }
 
 .containerArticles {
-  background: var(--brand-beige);
-
+  background-color: none;
   border-radius: 2rem;
+  border: 1px solid black;
   width: 45rem;
   height: 15.7rem;
   margin: auto;
@@ -190,6 +192,7 @@ nav.scroll {
 .articleParagraph {
   width: 40rem;
   font-size: 1.3rem;
+  visibility: visible;
 
 }
 
@@ -212,9 +215,7 @@ nav.scroll {
 display: flex;
 }
 
-.containerArticles {
-  background-color: wheat;
-}
+
 
 /*======================MOBILE======================================*/
 
@@ -225,18 +226,90 @@ display: flex;
     place-items: center;
   }
 
-  .footer {
-    width: 100vw;
-  }
+.explorer {
+  display: flex;
+  flex-direction: table-row;
+}
 
-  .containerArticles {
-    width: 80vw;
-  }
+.textRed {
+  font-size: 3rem;  
+  padding: auto;
+}
+
+.textWhite {
+  font-size: 1.9rem;
+}
+
+.explorerFloatMenu {
+  border: 1px solid black;
+  border-radius: 1rem;
+  width: auto;
+  padding: 1rem;
+  margin-top: 3rem;
+  height: 4rem;
+  align-items: center;
+  justify-content: center;
+  margin-right: .2rem;
+}
+
+.drawPhotos {
+  display: flex;
+  flex-direction: column;
+}
+
+.gridPhotosRefer {
+  width: 20rem;
+  height: 20rem;
+}
+
+.gridPhotos {
+  width: auto;
+  height: 10rem;
+  margin-bottom: 0.2rem;
+  margin-left: 0.2rem;
 }
 
 
+  .articleParagraph {
+    visibility: hidden;
+    width: 3rem;
+    height: 5rem;
+  }
 
-.imageItem {
-  width: 20rem;
-  height: 20rem;
+.articles {
+  display: flex;
+  flex-direction: column;
+
+}
+.articlesLeft {
+  background-color: red;
+  width: 100vw;
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+
+.containerArticles {
+  border-radius: 2rem;
+  width: 30rem;
+  height: 15.7rem;
+  margin-bottom: 1rem;
+  transition: 100ms;
+
+}
+
+.articlesRight {
+  margin: auto;
+  width: 30rem;
+  height: 30rem;
+}
+
+.containerAds {
+  border-radius: 2rem;
+  width: auto;
+  height: 30rem;
+  margin: auto;
+
+}
 }
