--- a/src/layout/Articles.css
+++ b/src/layout/Articles.css
@@ -18,6 +18,73 @@ html {
   --brnad-light2: hsl(180, 14%, 97%);
   --brand-dark: hsl(170, 100%, 14%);
 
+ --rich-black-fogra-29: hsl(210, 26%, 7%);
+  --champagne-pink_20: hsla(23, 61%, 86%, 0.2);
+  --independence_30: hsla(245, 17%, 29%, 0.3);
+  --gray-x-11-gray: hsl(0, 0%, 73%);
+  --champagne-pink: hsl(23, 61%, 86%);
+  --spanish-gray: hsl(0, 0%, 60%);
+  --sonic-silver: hsl(0, 0%, 47%);
+  --deep-saffron: hsl(32, 100%, 59%);
+  --dark-orange: hsl(28, 100%, 58%);
+  --desert-sand: hsl(23, 49%, 82%);
+  --isabelline: hsl(38, 44%, 96%);
+  --gainsboro: hsl(0, 0%, 87%);
+  --tangerine: hsl(31, 84%, 50%);
+  --cinnabar: hsl(3, 90%, 55%);
+  --black_95: hsla(0, 0%, 0%, 0.95);
+  --cultured: hsl(0, 0%, 93%);
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --onyx: hsl(0, 0%, 27%);
+
+  /**
+   * typography
+   */
+
+  --ff-shadows-into-light: 'Shadows Into Light', cursive;
+  --ff-roboto: 'Roboto', sans-serif;
+  --ff-rubik: 'Rubik', sans-serif;
+
+  --fs-1: 7.2rem;
+  --fs-2: 2.2rem;
+  --fs-3: 1.8rem;
+  --fs-4: 1.4rem;
+  --fs-5: 1.2rem;
+
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+
+  /**
+   * spacing
+   */
+
+  --section-padding: 60px;
+
+  /**
+   * shadow
+   */
+
+  --shadow-1: 0 1px 4px hsla(0, 0%, 0%, 0.2);
+  --shadow-2: 0 1px 2px hsla(0, 0%, 0%, 0.2);
+
+  /**
+   * transition
+   */
+
+  --transition-1: 0.25s ease;
+  --transition-2: 0.5s ease;
+
+  /**
+   * clip path
+   */
+
+  --clip-path-1: polygon(0 40%, 100% 0%, 100% 100%, 0 100%);
+  --clip-path-2: polygon(0 0%, 100% 0%, 100% 100%, 0 100%);
+
+
+
   --nav-height: 7.2rem;
 
   font-size: 62.5%;
@@ -83,7 +150,7 @@ nav.scroll {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem;
-  background-color: white;
+  background-color: none;
 
 }
 
@@ -142,16 +209,16 @@ nav.scroll {
 
 .articles {
   display: flex;
-  flex-direction: row;
-  width: auto;
-  height: auto;
+  flex-direction: column;
+
 }
 
 .articlesLeft {
-  padding-left: 5rem;
+  display: grid;
+  flex-direction: row;
   margin: auto;
   background-color: none;
-  width: 50vw;
+
 }
 
 .articlesRight {
@@ -159,7 +226,7 @@ nav.scroll {
   margin: auto;
   width: 50vw;
   height: 100rem;
-  background-color: none;
+  background-color: blueviolet;
 }
 
 .containerAds {
@@ -172,21 +239,24 @@ nav.scroll {
 }
 
 .containerArticles {
-  background-color: none;
+  background-color:var(--brand-beige);
   border-radius: 2rem;
-  border: 1px solid black;
-  width: 45rem;
-  height: 15.7rem;
+  width: auto;
+  height: 45.7rem;
   margin: auto;
-  margin-bottom: 3rem;
   transition: 100ms;
 
 }
 
+.containerArticles:hover  {
+  background-color: var(--brand-dark);
+}
 
+.containerArticles:hover, .articleTitle, .articleParagraph {
+
+}
 .articleTitle {
   font-size: 2.2rem;
-  padding-top: 2rem;
 }
 
 .articleParagraph {
@@ -198,6 +268,8 @@ nav.scroll {
 
 .linkStyle {
   text-decoration: none;
+  background-color: none;
+  width: auto;
 }
 
 .imagesArticles {
@@ -282,7 +354,7 @@ display: flex;
 
 }
 .articlesLeft {
-  background-color: red;
+  background-color: none;
   width: 100vw;
   margin-top: 3rem;
   display: flex;
@@ -313,3 +385,154 @@ display: flex;
 
 }
 }
+
+
+
+.section { padding-block: var(--section-padding); }
+
+.section.white { background-color: var(--isabelline); }
+
+.section-divider { position: relative; }
+
+.section-divider::before,
+.section-divider::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-repeat: repeat no-repeat;
+  background-position: bottom;
+}
+
+.title-h2 {
+ font-size: 5rem;
+}
+
+.section-title > .span {
+  display: inline-block;
+  color: var(--primary-color);
+}
+
+.blog { text-align: center; }
+
+.blog .section-title { margin-block: 10px 20px; }
+
+.blog .section-text {
+  margin-block-end: 40px;
+  max-width: 44ch;
+  margin-inline: auto;
+}
+
+.blog-list {
+  display: grid;
+  gap: 30px;
+}
+
+.blog-card {
+  background-color: var(--white);
+  text-align: left;
+  box-shadow: var(--shadow-2);
+}
+
+.blog-card .card-banner {
+  position: relative;
+  aspect-ratio: 1 / 0.65;
+  background-color: var(--primary-color);
+}
+
+.blog-card .badge {
+  background-color: var(--primary-color);
+  top: 20px;
+  right: 20px;
+  font-family: var(--ff-rubik);
+  text-transform: uppercase;
+  --bg-color: var(--tangerine);
+  --padding-block: 5px;
+}
+
+.blog-card .card-content { padding: 30px; }
+
+.blog-card .card-meta-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px 20px;
+}
+
+.blog-card .card-meta-link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.blog-card .card-meta-link ion-icon {
+  color: var(--tangerine);
+  font-size: 1.5rem;
+  --ionicon-stroke-width: 60px;
+}
+
+.blog-card :is(.meta-info, .btn-link) {
+  color: var(--rich-black-fogra-29);
+  font-family: var(--ff-rubik);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-600);
+  text-transform: uppercase;
+  line-height: 1;
+  transition: var(--transition-1);
+}
+
+.blog-card .card-meta-link:is(:hover, :focus) .meta-info {
+  color: var(--deep-saffron);
+}
+
+.blog-card .card-title {
+  font-size: var(--fs-3);
+  margin-block: 20px 15px;
+  transition: var(--transition-1);
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+.blog-card .card-title:is(:hover, :focus) {
+  opacity: 0.8;
+  text-decoration: underline;
+}
+
+.blog-card .card-text { margin-block-end: 20px; }
+
+.blog-card .btn-link {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.blog-card .btn-link ion-icon { font-size: 1.5rem; }
+
+.blog-card .btn-link:is(:hover, :focus) {
+  color: var(--deep-saffron);
+  gap: 10px;
+}
+
+.h1,
+.h3,
+.h4 {
+  font-family: var(--ff-rubik);
+  color: var(--rich-black-fogra-29);
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+
+
+.h2,
+.h3,
+.h4 { font-weight: var(--fw-600); }
+
+.h3 { font-size: var(--fs-2); }
+
+.h4 { font-size: var(--fs-3); }
+
+   .blog-card .card-title { --fs-3: 2.2rem; }
+  .blog-list { grid-template-columns: repeat(3, 1fr); }
